--- a/resources/editor/editor2.html
+++ b/resources/editor/editor2.html
@@ -6,11 +6,11 @@
         <title>Editor</title>
         <style type="text/css" media="screen">
             body {
-                overflow: hidden;
+                overflow: auto;
+                z-index: 0;
             }
 
             #editor {
-                z-index: no;
                 margin: 0;
                 position: absolute;
                 top: 0;
